--- a/.github/workflows/operator-version-update.yaml
+++ b/.github/workflows/operator-version-update.yaml
@@ -36,13 +36,14 @@ jobs:
         run: |
           echo "Latest version provided --> ${{ github.event.inputs.latest-version }}"
           echo "Existing version provided --> ${{ github.event.inputs.existing-version }}"
-          echo "CSM program version --> ${{ github.event.inputs.csm-version }}
+          echo "CSM program version --> ${{ github.event.inputs.csm-version }}"
       - name: Update version
         run: |
           echo "Updating Operator version to ${{ github.event.inputs.latest-version }}"
-          
+          pwd               
           if [ -f "scripts/operator-version-update.sh" ]; then
           echo "INSIDE IF"
+          pwd
           cd scripts
           pwd
           echo " before bash script"
