--- a/.github/workflows/operator-version-update.yaml
+++ b/.github/workflows/operator-version-update.yaml
@@ -40,14 +40,12 @@ jobs:
       - name: Update version
         run: |
           echo "Updating Operator version to ${{ github.event.inputs.latest-version }}"
-          pwd               
-          if [ -f "scripts/operator-version-update.sh" ]; then
+          pwd 
+          if [ -f "dell/common-github-actions/.github/scripts/operator-version-update.sh" ]; then
           echo "INSIDE IF"
           pwd
-          cd scripts
-          pwd
           echo " before bash script"
-          bash operator-version-update.sh ${{ github.event.inputs.latest-version }} ${{ github.event.inputs.existing-version }} ${{ github.event.inputs.csm-version }}
+          bash dell/common-github-actions/.github/scripts/operator-version-update.sh ${{ github.event.inputs.latest-version }} ${{ github.event.inputs.existing-version }} ${{ github.event.inputs.csm-version }}
           echo " bash execution completed"
           cd ..
           fi
