--- a/.github/workflows/release-creator.yaml
+++ b/.github/workflows/release-creator.yaml
@@ -1,4 +1,4 @@
-# Copyright (c) 2024 Dell Inc., or its subsidiaries. All Rights Reserved.
+# Copyright (c) 2025 Dell Inc., or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,7 +14,7 @@ on:
   workflow_call:
     inputs:
       version:
-        description: 'Version to release (major, minor, patch)'
+        description: 'Semantic version to release. Ex: major, minor, or patch'
         required: true
         type: string
 jobs:
@@ -62,6 +62,7 @@ jobs:
           echo "New version to be released:v$new_version"
           echo "REL_VERSION=v${new_version}" >> $GITHUB_ENV
 
+      # To import GPG key and configure git for signed commits (Annotated tags)
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v6
         with:
