--- a/.github/workflows/operator-version-update.yaml
+++ b/.github/workflows/operator-version-update.yaml
@@ -29,11 +29,6 @@ jobs:
   operator-version-update:
     runs-on: ubuntu-latest
     steps:
-      - name: Absolute path
-        run: |
-          echo "Absolute path --> "
-          pwd
-          
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -47,12 +42,12 @@ jobs:
           echo "Updating Operator version to ${{ github.event.inputs.latest-version }}"
           echo "GITHUB_WORKSPACE --> $GITHUB_WORKSPACE"
           echo "github.workspace --> ${{ github.workspace }}" 
-          pwd 
-          if [ -f "$GITHUB_WORKSPACE/dell/common-github-actions/.github/scripts/operator-version-update.sh" ]; then
+          
+          if [ -f "$GITHUB_WORKSPACE/.github/scripts/operator-version-update.sh" ]; then
           echo "INSIDE IF"
           pwd
           echo " before bash script"
-          bash $GITHUB_WORKSPACE/dell/common-github-actions/.github/scripts/operator-version-update.sh ${{ github.event.inputs.latest-version }} ${{ github.event.inputs.existing-version }} ${{ github.event.inputs.csm-version }}
+          bash $GITHUB_WORKSPACE/.github/scripts/operator-version-update.sh ${{ github.event.inputs.latest-version }} ${{ github.event.inputs.existing-version }} ${{ github.event.inputs.csm-version }}
           echo " bash execution completed"
-          cd ..
+          pwd
           fi
