--- a/.github/workflows/trigger-image-version-workflow.yaml
+++ b/.github/workflows/trigger-image-version-workflow.yaml
@@ -7,12 +7,12 @@
 #  http://www.apache.org/licenses/LICENSE-2.0
 
 # Trigger workflow for go version update on CSM projects
-name: Trigger Go Version Workflow
+name: Trigger Image Version Workflow
 
 on:
-  schedule:
+  #schedule:
     # Runs on the 12th hour on the first day of every month.
-    - cron: '0 12 1 * *'
+    #- cron: '0 12 1 * *'
   # Can be manually triggered
   workflow_dispatch:
 
