add dependabot automerge

--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -89,3 +89,7 @@ jobs:
         with:
           directories: .
           options: -ri
+
+  dependabot_automerge:
+    name: Automerge Dependabot PRs
+    uses: dell/common-github-actions/.github/workflows/dependabot-automerge.yml@main
