--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -14,110 +14,132 @@ on:
   workflow_call:
     inputs:
       version:
-        description: "Version to release (major, minor, patch). Example: 1.x.x"
+        description: "Semantic version to release. Ex: major, minor, or patch"
         type: string
         required: true
-      image:
-        description: "Image name. Example: csi-powerstore"
+      images:
+        description: "List of image names. Example: csi-powerstore,csi-isilon"
         type: string
         required: true
-
 jobs:
   build-and-scan:
-    name: Build, Scan and Release
+    name: Build and Scan
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0 # Fetch the full history including tags
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.23"
-
       - name: Install dependencies
         run: go mod tidy
+      - name: Build binaries        
+        run: |
+          echo "Building binaries to attach to the release if any..."
+          if "${{ inputs.images == 'cert-csi' }}"; then
+              make build
+          fi
+          if "${{ contains(inputs.images, 'dell-csi-replicator') || contains(inputs.images, 'dell-replication-controller') }}"; then
+              cd repctl && make build                        
+          fi
 
-      # TODO: build binaries if any like dellctl, repctl etc.
-      - name: Build
-        run: go build -v ./...
+  release-and-tag:
+    name: Tag and Release
+    needs: build-and-scan
+    uses: dell/common-github-actions/.github/workflows/release-creator.yaml@main
+    with:
+      version: ${{ inputs.version }}
+    secrets: inherit
 
   push-images:
     name: Release images to Dockerhub and Quay
-    needs: build-and-scan
+    needs: release-and-tag
     runs-on: ubuntu-latest
     steps:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Push Docker Image
+      - name: Push images to Dockerhub
         run: |
-          docker pull dellemc/${{ inputs.image }}:nightly
-          docker tag dellemc/${{ inputs.image }}:nightly dellemc/${{ inputs.image }}:v${{ inputs.version }}
-          docker push dellemc/${{ inputs.image }}:v${{ inputs.version }}
-          docker tag dellemc/${{ inputs.image }}:v${{ inputs.version }} dellemc/${{ inputs.image }}:latest
-          docker push dellemc/${{ inputs.image }}:latest
+          # Push each comma seperated images by splitting the string with ','
+          images_list=$(echo '${{ inputs.images }}' | tr -d '[]"' | tr ',' ' ')
+          for image in $images_list; do
 
-      - name: Get Quay Manifest
-        id: get_quay_manifest
+            latest_version=$(curl -s https://registry.hub.docker.com/v2/repositories/dellemc/$image/tags | jq -r '.results[].name' | sort -V | tail -n 1)
+            echo "Current latest version of $image:$latest_version"
+
+            IFS='.' read -r -a version_parts <<< "$latest_version"
+          
+            if "${{ inputs.version == 'major' }}"; then
+              # major version bump up
+              version_parts[0]=$(expr ${version_parts[0]} + 1)
+              new_version="${version_parts[0]}.0.0"
+            fi
+            if "${{ inputs.version == 'minor' }}"; then
+              # minor version bump up
+              version_parts[1]=$(expr ${version_parts[1]} + 1)
+              new_version="${version_parts[0]}.${version_parts[1]}.0"
+            fi
+            if "${{ inputs.version == 'patch' }}"; then
+              # patch version bump up
+              version_parts[2]=$(expr ${version_parts[2]} + 1)
+              new_version="${version_parts[0]}.${version_parts[1]}.${version_parts[2]}"
+            fi
+          
+           echo "Pushing image: $image:$new_version"                      
+           docker pull dellemc/$image:nightly
+           docker tag dellemc/$image:nightly dellemc/$image:$new_version
+           docker push dellemc/$image:$new_version
+           docker tag dellemc/$image:$new_version dellemc/$image:latest
+           docker push dellemc/$image:latest
+          done
+
+      - name: Push images to Quay.io
         run: |
-          SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
-          echo "::set-output name=sha::$SHA"
+          # Push each comma seperated images by splitting the string with ','
+          images_list=$(echo '${{ inputs.images }}' | tr -d '[]"' | tr ',' ' ')
+          for image in $images_list; do
+          
+            latest_version=$(curl -s https://quay.io/api/v1/repository/dell/container-storage-modules/$image/tag/?limit=100 | jq -r '.tags[].name' | sort -V | tail -n 1)
+            echo "Current latest version of $image:$latest_version"
 
-      - name: Push Quay Manifest
-        run: |
-          curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag/v${{ inputs.version }}' \
-          --header 'Content-Type: application/json' \
-          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
-          --data-raw '{
-            "manifest_digest": "${{ steps.get_quay_manifest.outputs.sha }}"
-          }'
-          curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag/latest' \
-          --header 'Content-Type: application/json' \
-          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
-          --data-raw '{
-            "manifest_digest": "${{ steps.get_quay_manifest.outputs.sha }}"
-          }'
-  create-release:
-    name: Create release and branch
-    needs: push-images
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+            IFS='.' read -r -a version_parts <<< "$latest_version"
+          
+            if "${{ inputs.version == 'major' }}"; then
+              # major version bump up
+              version_parts[0]=$(expr ${version_parts[0]} + 1)
+              new_version="${version_parts[0]}.0.0"
+            fi
+            if "${{ inputs.version == 'minor' }}"; then
+              # minor version bump up
+              version_parts[1]=$(expr ${version_parts[1]} + 1)
+              new_version="${version_parts[0]}.${version_parts[1]}.0"
+            fi
+            if "${{ inputs.version == 'patch' }}"; then
+              # patch version bump up
+              version_parts[2]=$(expr ${version_parts[2]} + 1)
+              new_version="${version_parts[0]}.${version_parts[1]}.${version_parts[2]}"
+            fi
+           repository='dell/container-storage-modules'
+           # Get manifest digest
+           SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/$repository/$image/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
 
-      - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@v6
-        with:
-            gpg_private_key: ${{ secrets.CSM_GPG_PRIVATE_KEY }}
-            git_user_signingkey: true
-            git_commit_gpgsign: true
-            git_tag_gpgsign: true
-            git_config_global: true
+           echo "Pushing image: $image:$new_version"
 
-      - name: Create new tag
-        run: |
-            git tag -s -a v${{ inputs.version }} -m "Release v${{ inputs.version }}"
-            git push origin v${{ inputs.version }}
-      
-      # TODO: attach built binaries to the release (if any like repctl, dellctl etc.)
-      - name: Create Release
-        id: release_notes
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ inputs.version }}
-          name: Release v${{ inputs.version }}
-          draft: true
-          prerelease: false
-          generate_release_notes: true
-          make_latest: true
-          body: |
-            ## Documentation
-            [General Documentation](https://dell.github.io/csm-docs/docs/)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create release branch
-        run: |
-          git checkout -b release/v${{ inputs.version }}
-          git push origin release/v${{ inputs.version }}
+           # Create version and latest tags
+           curl -s --location --request PUT 'https://quay.io/api/v1/repository/$repository/$image/tag/$new_version' \
+           --header 'Content-Type: application/json' \
+           --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
+           --data-raw '{
+             "manifest_digest": "$SHA"
+           }'
+           curl -s --location --request PUT 'https://quay.io/api/v1/repository/$repository/$image/tag/latest' \
+           --header 'Content-Type: application/json' \
+           --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
+           --data-raw '{
+             "manifest_digest": "$SHA"
+           }'
+          done
