--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -66,14 +66,14 @@ jobs:
       # Used as an indicator of the quality of changes introduced for a package
       # by showing if package coverage has increased or decreased
       - name: Archive code coverage results
-        continue-on-error: true
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage
           path: ${{ steps.test_coverage.outputs.code_coverage_artifact }}
 
       - name: Code coverage report
-        continue-on-error: true
+        if: always()
         uses: fgrosse/go-coverage-report@v1.2.0
         with:
           coverage-artifact-name: "code-coverage"
