--- a/.github/workflows/release-creator.yaml
+++ b/.github/workflows/release-creator.yaml
@@ -84,14 +84,14 @@ jobs:
         uses: actions/download-artifact@v4.1.8
   
       # This is required to check if the binary exists and update its name to the release.
-      - run: |
-          ls -l
-          FILE="./cert-csi-linux-amd64/cert-csi-linux-amd64"
-          if [ -f "./repctl-linux-amd64" ]; then
-              FILE="./repctl-linux-amd64/repctl-linux-amd64"
-          fi
-          echo "File name: $FILE"
-          echo "FILE_NAME=$FILE" >> $GITHUB_ENV
+      - run: |            
+            FILE="./cert-csi-linux-amd64/cert-csi-linux-amd64"
+            if [ -d "repctl-linux-amd64" ]; then
+                FILE="./repctl-linux-amd64/repctl-linux-amd64"
+            fi
+            echo "File name: $FILE"
+            echo "FILE_NAME=$FILE" >> $GITHUB_ENV
+        shell: bash
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
